--- a/package.json
+++ b/package.json
@@ -10,25 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@material-tailwind/react": "^2.1.10",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router": "^7.0.1"
+    "@heroicons/react": "2.2.0",
+    "@material-tailwind/react": "2.1.10",
+    "@reduxjs/toolkit": "2.5.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "7.54.2",
+    "react-query": "3.39.3",
+    "react-redux": "9.2.0",
+    "react-router": "7.0.1",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "vite": "^6.0.1"
+    "@eslint/js": "9.15.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.15.0",
+    "eslint-plugin-react": "7.37.2",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-refresh": "0.4.14",
+    "globals": "15.12.0",
+    "postcss": "8.4.49",
+    "sonner": "^1.7.1",
+    "tailwindcss": "3.4.15",
+    "vite": "6.0.1"
   }
 }
