Feat: Agrega autenticacion

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,14 +7,15 @@
       "@containers/*": ["src/shared/containers/*"],
       "@hooks/*": ["src/hooks/*"],
       "@lib/*": ["src/lib/*"],
-      "@accounts/*": ["src/accounts/*"],
-      "@budgets/*": ["src/budgets/*"],
-      "@dashboard/*": ["src/dashboard/*"],
+      "@accounts/*": ["src/modules/accounts/*"],
+      "@budgets/*": ["src/modules/budgets/*"],
+      "@dashboard/*": ["src/modules/dashboard/*"],
       "@reducers/*": ["src/reducers/*"],
       "@context/*": ["src/context/*"],
       "@services/*": ["src/shared/services/*"],
       "@helpers/*": ["src/shared/helpers/*"],
-      "@shared/*": ["src/shared/*"]
+      "@shared/*": ["src/shared/*"],
+      "@modules/*": ["src/modules/*"]
     }
   }
 }
