--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@heroicons/react": "2.2.0",
     "@material-tailwind/react": "2.1.10",
     "@reduxjs/toolkit": "2.5.0",
+    "apexcharts": "^4.7.0",
     "react": "18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "18.3.1",
     "react-hook-form": "7.54.2",
     "react-query": "3.39.3",
